# opengl-exercises

./: CMakeLists.txt
includes/: camera.h  shader.h
includes/glad/: glad.h
src/: glad.c
src/part1/: coordinates.cpp  hello_triangle.cpp  hello_window.cpp  shader.vs  shaders.cpp  texture.fs  texture.vs  textures.cpp
